Aligning logo and resizing now working correctly

--- a/homeStyle.css
+++ b/homeStyle.css
@@ -10,7 +10,7 @@ html {
   pointer-events: none;
   position: absolute;
   width: 100%;
-  height: 200px;
+  height: 20%;
   margin: 0;
   z-index: 2;
   opacity: 0.9;
@@ -76,15 +76,15 @@ html {
 #logo{
   pointer-events: none;
 
-  height: 150px;
+  height: 15%;
   position: absolute;
   z-index: 6;
 
   display: block;
   /*margin-left: 830px;*/
-  margin-left: 45%;
+  margin-left: 42.5%;
   /*margin-right: 830px;*/
-  width: 10%;
+  width: 15%;
 
 }
 
